--- a/.github/workflows/org_babel_tests.yml
+++ b/.github/workflows/org_babel_tests.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Run Tests
       shell: bash
       run: |
-        "./tests/run_expect_tests.sh"
+        "cd tests && ./run_expect_tests.sh"
 
