--- a/.github/workflows/org_babel_tests.yml
+++ b/.github/workflows/org_babel_tests.yml
@@ -35,9 +35,9 @@ jobs:
       with:
         version: 29.4
 
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
-      timeout-minutes: 15
+    # - name: Setup tmate session
+    #   uses: mxschmitt/action-tmate@v3
+    #   timeout-minutes: 15
 
 
     - name: Run Tests
