--- a/.github/workflows/org_babel_tests.yml
+++ b/.github/workflows/org_babel_tests.yml
@@ -20,10 +20,12 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
-    - name: Install Python dependencies
+    - name: Install dependencies
       run: |
+        sudo apt-get update
+        sudo apt-get install -y imagemagick
         python -m pip install --upgrade pip
-        pip install pandas
+        pip install pandas tabulate
     - name: Install Nix
       uses: DeterminateSystems/nix-installer-action@main
     
