Add timeout to github action tests

--- a/.github/workflows/org_babel_tests.yml
+++ b/.github/workflows/org_babel_tests.yml
@@ -43,9 +43,9 @@ jobs:
     #   uses: mxschmitt/action-tmate@v3
     #   timeout-minutes: 15
 
-
     - name: Run Tests
       shell: bash
+      timeout-minutes: 10
       run: |
         cd tests
         ./run_expect_tests.sh
